# node

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  README.md  config.ini.example  docker-compose.yml  node.sln  node.vcxproj  node.vcxproj.filters
.devcontainer/: devcontainer.json  docker-compose.override.yml
.devops/docker/: Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml.example  entrypoint.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
benchmarks/: blockchain.cpp  crypto.cpp  main.cpp  models.cpp  multiple_instances.cpp  time_tester.h
src/: const.h  main.cpp  pch.h
src/api/: api.cpp  api.h  api_options.cpp  api_options.h  api_server.cpp  api_server.h
src/blockchain/: bans.cpp  bans.h  block_tree.cpp  block_tree.h  block_tree_node.h  blockchain.cpp  blockchain.h  blockchain_options.cpp  blockchain_options.h  blockchain_test.cpp  blockchain_test.h  crypto_verifier.cpp  crypto_verifier.h  events.cpp  events.h  pending_transactions.cpp  pending_transactions.h  post_transaction_result.h
src/blockchain/block/: block.cpp  block.h  block_body.cpp  block_body.h  block_header.cpp  block_header.h  block_iterator.cpp  block_iterator.h  block_transaction_ids.cpp  block_transaction_ids.h  pending_block.cpp  pending_block.h
src/blockchain/transactions/: commit.cpp  commit.h  create_miner.cpp  create_miner.h  create_user.cpp  create_user.h  increase_stake.cpp  increase_stake.h  init.cpp  init.h  lock_user.cpp  lock_user.h  logout_user.cpp  logout_user.h  select_miner.cpp  select_miner.h  sponsor_user.cpp  sponsor_user.h  transaction.cpp  transaction.h  transfer.cpp  transfer.h  unlock_user.cpp  unlock_user.h  update_miner.cpp  update_miner.h  update_user.h  (+3 more)
src/communication/: acceptor.cpp  acceptor.h  communication.cpp  communication.h  communication_options.cpp  communication_options.h  communication_test.cpp  communication_test.h  connection_manager.cpp  connection_manager.h  session.cpp  session.h  session_data.h  shared_transaction_ids.h
src/crypto/: certificate.cpp  certificate.h  checksum.cpp  crypto.h  crypto_array.cpp  crypto_array.h  exception.h  hash.h  miner_id.h  multi_signatures.h  private_key.cpp  private_key.h  public_key.cpp  public_key.h  signature.h  transaction_id.h  user_id.h
src/database/: base_database.cpp  base_database.h  columns.h  confirmed_database.h  database.cpp  database.h  database_facades.h  database_options.cpp  database_options.h  unconfirmed_database.h
src/filesystem/: filesystem.cpp  filesystem.h
src/tools/: assert.hpp  endpoint.hpp  enum_printer.hpp  event_loop_thread.hpp  exception.hpp  ip_address.hpp  json_templates.hpp  logger.hpp  performance_timer.hpp  safe_callback.hpp  serializer.hpp  shared_thread.hpp  thread.hpp
tests/: main.cpp
tests/blockchain/: block_tree.cpp  blockchain.cpp  blockchain_fixture.h  events.cpp  mining_queue.cpp  test_user.h
tests/communication/: acceptor.cpp  communication.cpp  communication_fixture.h  connection.cpp  connection_manager.cpp
tests/crypto/: crypto.cpp  multi_signatures.cpp  private_key.cpp  transaction_id.cpp
tests/database/: database.cpp  database_fixture.h
tests/filesystem/: filesystem.cpp
tests/models/: miner.cpp
tests/tools/: serializer.cpp
vcpkg/iroha-ed25519/: CONTROL  portfile.cmake
vcpkg/rocksdb/: CONTROL  portfile.cmake
(+116 files in other folders)
